@@ -103,6 +103,7 @@ easier to use. The changes are:
 - VBLE Decoder
 - OS X Video Decoder Acceleration (VDA) support
 - CRI ADX audio format demuxer
+- Playstation Portable PMP format demuxer
 
 
 version 0.7:
